Added hidden input to pass the doctype through to the backend on the document_creation template

--- a/templates/documents/create_document.html
+++ b/templates/documents/create_document.html
@@ -32,6 +32,7 @@
     <!-- ./Django form errors -->
     <form method="POST" action="{% url 'create_document' %}" class="form mt-5">
         {% csrf_token %}
+        <input type="hidden" name="doc_type" value="{{ doc_type_raw }}">
         <fieldset class="mb-4">
             <legend class="fieldset-label text-black mb-3 w-auto">Document Details</legend>
             <div class="alert alert-info">
