Create_document: Asked user to separate tags via space rather than comma

--- a/templates/documents/create_document.html
+++ b/templates/documents/create_document.html
@@ -75,7 +75,7 @@
                     <label for="extra-tags">Extra tags</label>
                     <input name="extra_tags" id="extra-tags" type="text" class="form-control" aria-describedby="tagsHelpBlock">
                     <small id="tagsHelpBlock" class="form-text text-muted">
-                        Enter as many tags as you like, separated by a comma. 
+                        Enter as many tags as you like, separated by a <strong>space</strong>. 
                         For tags that are multi-word, use camelCase. Eg: tutoring, learningSuccess, sales
                     </small>
                 </div>
