--- a/templates/documents/document_base.html
+++ b/templates/documents/document_base.html
@@ -14,7 +14,7 @@
             {% endblock doc_content %}
         </div>
         <!-- Sidebar area for searching categories and tags -->
-        <div class="col-12 col-lg-3">
+        <div class="col-12 col-lg-3 mb-4">
             <article class="row card docs-list-sidecard mt-4">
                 <div class="col-12 p-3">
                     <h5>Search by Category</h5>
