--- a/templates/documents/document_base.html
+++ b/templates/documents/document_base.html
@@ -37,7 +37,11 @@
             </article>
             <article class="row card docs-list-sidecard mt-4">
                 <div class="col-12 p-3">
-                    Search terms shown here
+                    {% if search_term %}
+                        Search term: {{ search_term }}
+                    {% else %}
+                        No search term
+                    {% endif %}
                 </div>
             </article>
         </div>
