Changed name of create_document to document_create. Refactored all mentions of this name

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 <li><a href="#document-menu" class="document-dropdown"><i class="fas fa-file-alt"></i><p class="d-none">Documents Menu</p></a></li>
                 <ul class="collapse" id="document-menu">
                     <li><a href="{% url 'document_overview' %}">Document Lookup</a></li>
-                    <li><a href="#">Document Creation</a></li>
+                    <li><a href="{% url 'doc_creation_area' %}">Document Creation</a></li>
                 </ul>
                 <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i><p class="d-none">Personal Area</p></a></li>
                 <li><a href="#"><i class="fas fa-calendar-alt"></i><p class="d-none">Schedule</p></a></li>
