Redirected doc creation page to Home page after doc creation completes

--- a/templates/documents/document_create.html
+++ b/templates/documents/document_create.html
@@ -99,6 +99,7 @@
             </div>
         </fieldset>
         <button id="doc-create-btn" type="button" class="btn branded-btn">Create Document</button>
+        <i id="doc-create-spinner" class="fas fa-spinner d-none"></i>
     </form>
 </section>
 {% endblock %}
