Changed top-bar-divider from ID to class to reuse it

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
                 {% endwith %}
             {% endfor %}
         {% else %}
-        <div id="top-bar-divider"></div>
+        <div class="top-bar-divider"></div>
         {% endif %}
         <!-- /.Top bar -->
     </header>
