--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,6 +43,7 @@ main {
   min-height: 100vh;
   width: calc(100% - 70px);
   margin-left: auto;
+  overflow-x: hidden;
 }
 
 p, #document-menu > li > a {
@@ -243,7 +244,7 @@ noscript > p {
   color: #fff;
 }
 
-#top-bar-divider {
+.top-bar-divider {
   width: 100%;
   height: 10px;
   background-color: #fff;
@@ -476,6 +477,13 @@ input:checked + .slider:before {
 
   #top-bar-search > input {
     width: 80%;
+  }
+
+  /* Only targets the dividers on the Admin page, not the main top-bar divider */
+  .top-bar-divider.admin-divider {
+    position: relative;
+    left: -20px;
+    width: calc(100% + 40px);
   }
 
   #burger-menu > a {
