--- a/templates/administration/admin_area.html
+++ b/templates/administration/admin_area.html
@@ -32,4 +32,26 @@
         </div>
     </div>
 </section>
+<div class="top-bar-divider admin-divider"></div>
+<section class="container">
+    <div class="row mt-5">
+        <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-folder-plus"></i></p>
+                <p>Create Category/Tag</p>
+            </a>
+        </div>
+        <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-folder"></i></p>
+                <p>Edit Category/Tag</p>
+            </a>
+        </div>
+        <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 mx-auto text-center">
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-folder-minus"></i></p>
+                <p>Remove Category/Tag</p>
+            </a>
+        </div>
+</section>
 {% endblock %}
