--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -36,7 +36,7 @@
                 {% for entry in file_tags %}
                     {% if entry.id == file.id %}
                         {% for tag in entry.tags %}
-                            <span>{{ tag }}</span>
+                            <span class="badge badge-pill tag-badge">{{ tag }}</span>
                         {% endfor %}
                     {% endif %}
                 {% endfor %}
