Updated checkbox ID on create_category template

--- a/templates/administration/create_category.html
+++ b/templates/administration/create_category.html
@@ -46,8 +46,8 @@
         </fieldset>
         <fieldset class="mb-4">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="add_extra_category" id="add-another-category">
-                <label class="form-check-label" for="add-another-category">Add another category?</label>
+                <input class="form-check-input" type="checkbox" name="add_extra_category" id="another-category">
+                <label class="form-check-label" for="another-category">Add another category?</label>
             </div>
         </fieldset>
         <input type="submit" class="btn branded-btn" value="Create category" />
