Added disabled attribute to submit button on edit_user template

--- a/templates/administration/edit_user.html
+++ b/templates/administration/edit_user.html
@@ -60,7 +60,7 @@
                 <span class="slider round"></span>
             </label>
         </fieldset>
-        <input type="submit" class="btn branded-btn" value="Edit user" />
+        <input type="submit" class="btn branded-btn" value="Edit user" disabled/>
     </form>
 </section>
 {% endblock %}
