Added disabled attribute to submit button on delete_user page

--- a/templates/administration/delete_user.html
+++ b/templates/administration/delete_user.html
@@ -63,20 +63,7 @@
                 <input id="id_last_name" class="form-control" disabled>
             </div>
         </fieldset>
-        <!-- <fieldset class="mb-4">
-            <legend class="fieldset-label text-black mb-3 w-auto">Permissions</legend>
-            <p>Admin User <small>(Team Leads and Managers)</small></p>
-            <label class="switch">
-                <input type="checkbox" name="is_superuser" id="is-superuser" class="slider-input" />
-                <span class="slider round"></span>
-            </label>
-            <p>Is Active <small>(Switching this off is the preferred option to deleting the user outright, to help preserve old documents)</small></p>
-            <label class="switch">
-                <input type="checkbox" name="is_active" id="is-active" class="slider-input" />
-                <span class="slider round"></span>
-            </label>
-        </fieldset> -->
-        <input type="submit" class="btn branded-btn" value="Delete user" />
+        <input type="submit" class="btn branded-btn" value="Delete user" disabled/>
     </form>
 </section>
 {% endblock %}
